<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Ui.activities.ProductDetailsActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar_product_details_activity"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@drawable/app_gradient_color_background"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <TextView
            android:id="@+id/tv_title"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:paddingStart="@dimen/toolbar_title_paddingStart"
            android:paddingEnd="0dp"
            android:text="@string/title_product_details"
            android:textColor="@color/colorwhite"
            android:textSize="@dimen/toolbar_title_text_size"
            android:textStyle="bold"
            android:paddingLeft="@dimen/toolbar_title_paddingStart"
            android:paddingRight="0dp" />

    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:fillViewport="true"
        android:scrollbars="none"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar_product_details_activity">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/iv_product_detail_image"
                android:layout_width="match_parent"
                android:layout_height="@dimen/product_detail_image_height"
                android:background="@color/colorImageViewBackground"
                android:contentDescription="@string/content_description"
                android:scaleType="fitXY"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <LinearLayout
                android:id="@+id/ll_product_details_title_price"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_details_title_price_marginTop"
                android:background="@color/dashboard_item_details_bg"
                android:orientation="vertical"
                android:padding="@dimen/product_details_title_price_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toTopOf="@id/ll_size_functionality"
                app:layout_constraintTop_toBottomOf="@id/iv_product_detail_image">

                <com.example.shopme.utils.SMTextViewBold
                    android:id="@+id/tv_product_details_title"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/product_details_title_textSize"
                    tools:text="Product Title" />

                <com.example.shopme.utils.SMTextViewRegular
                    android:id="@+id/tv_product_details_price"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/product_details_price_textSize"
                    tools:text="100" />
            </LinearLayout>
            <LinearLayout
                android:id="@+id/ll_size_functionality"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/product_details_title_price_marginTop"
                android:orientation="horizontal"

                android:padding="@dimen/product_details_title_price_padding"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                android:layout_marginStart="16dp"
                android:layout_marginLeft="16dp"
                android:layout_marginEnd="90dp"
                app:layout_constraintTop_toBottomOf="@id/ll_product_details_title_price"

                app:layout_constraintBottom_toTopOf="@+id/tv_product_details_label"

                android:layout_marginRight="96dp">
                <com.example.shopme.utils.SMTextViewBold
                    android:id="@+id/size_s"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="S"
                    android:background="@drawable/item_grey_border_background"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="5dp"
                    android:textStyle="bold"

                    android:paddingBottom="5dp"/>
                <com.example.shopme.utils.SMTextViewBold
                    android:id="@+id/size_m"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="M"
                    android:background="@drawable/item_grey_border_background"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="5dp"
                    android:textStyle="bold"

                    android:paddingBottom="5dp"/>
                <com.example.shopme.utils.SMTextViewBold
                    android:id="@+id/size_l"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="L"
                    android:background="@drawable/item_grey_border_background"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="5dp"
                    android:textStyle="bold"

                    android:paddingBottom="5dp"/>
                <com.example.shopme.utils.SMTextViewBold
                    android:id="@+id/size_xl"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="16dp"
                    android:layout_marginRight="16dp"
                    android:text="XL"
                    android:background="@drawable/item_grey_border_background"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:paddingStart="16dp"
                    android:paddingEnd="16dp"
                    android:paddingTop="5dp"
                    android:textStyle="bold"

                    android:paddingBottom="5dp"/>
            </LinearLayout>

            <com.example.shopme.utils.SMTextViewBold
                android:id="@+id/tv_product_details_label"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_details_label_margin"
                android:text="@string/lbl_product_description"
                android:textColor="@color/item_value_text_color"
                android:textSize="@dimen/product_details_label_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/ll_size_functionality" />

            <com.example.shopme.utils.SMTextViewRegular
                android:id="@+id/tv_product_details_description"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/product_details_label_margin"
                android:layout_marginEnd="@dimen/product_details_label_margin"
                android:textColor="@color/colorSecondaryText"
                android:textSize="@dimen/product_details_description_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_details_label"
                tools:text="This is product details description." />

            <LinearLayout
                android:id="@+id/ll_product_details_quantity"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/product_details_label_margin"
                android:gravity="center_vertical"
                android:orientation="horizontal"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tv_product_details_description">

                <com.example.shopme.utils.SMTextViewBold
                    android:id="@+id/tv_product_details_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:text="@string/lbl_product_details_stock_quantity"
                    android:textColor="@color/item_value_text_color"
                    android:textSize="@dimen/product_details_label_textSize"
                    android:visibility="gone"

                    android:layout_marginRight="@dimen/product_details_stock_quantity_paddingStartEnd" />

                <com.example.shopme.utils.SMTextViewRegular
                    android:id="@+id/tv_product_details_stock_quantity"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/item_grey_border_background"
                    android:paddingStart="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:paddingTop="@dimen/product_details_stock_quantity_paddingTopBottom"
                    android:paddingEnd="@dimen/product_details_stock_quantity_paddingStartEnd"
                    android:paddingBottom="@dimen/product_details_stock_quantity_paddingTopBottom"
                    android:textColor="@color/colorSecondaryText"
                    android:textSize="@dimen/product_details_stock_quantity_textSize"
                    android:visibility="gone"

                    android:textStyle="bold"
                    tools:text="5" />
            </LinearLayout>






            <com.example.shopme.utils.SMButton
                android:id="@+id/btn_add_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="@string/btn_lbl_add_to_cart"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                android:visibility="gone"
                tools:visibility="visible"
                />


            <com.example.shopme.utils.SMButton
                android:id="@+id/btn_go_to_cart"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="16dp"
                android:layout_marginTop="30dp"
                android:layout_marginEnd="16dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/button_background"
                android:foreground="?attr/selectableItemBackground"
                android:gravity="center"
                android:paddingTop="@dimen/btn_padding"
                android:paddingBottom="@dimen/btn_padding"
                android:text="GO TO BAG"
                android:textColor="@android:color/white"
                android:textSize="@dimen/btn_textSize"
                android:visibility="gone"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintBottom_toBottomOf="parent"
                tools:visibility="visible" />



        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
    <!--END-->